--- a/hitBricks/game.html
+++ b/hitBricks/game.html
@@ -14,6 +14,8 @@
         <script src='block.js'></script>
         <script src='utils.js'></script>
         <script src='levels.js'></script>
+        <script src='scene.js'></script>
+        <script src='endScene.js'></script>
     </head>
     <body>
         <canvas id="canvas", width="400", height="300"></canvas>
