--- a/hitBricks/game.html
+++ b/hitBricks/game.html
@@ -8,14 +8,16 @@
                 border: 1px black solid;
             }
         </style>
-        <script src='guagame.js'></script>
-        <script src='ball.js'></script>
-        <script src='paddle.js'></script>
-        <script src='block.js'></script>
-        <script src='utils.js'></script>
+        <script src='guagame/guagame.js'></script>
+        <script src='scene/main/ball.js'></script>
+        <script src='scene/main/paddle.js'></script>
+        <script src='scene/main/block.js'></script>
+        <script src='guagame/utils.js'></script>
         <script src='levels.js'></script>
-        <script src='scene.js'></script>
-        <script src='endScene.js'></script>
+        <script src='guagame/gua_scene.js'></script>
+        <script src='scene/main/scene.js'></script>
+        <script src='scene/end/sceneEnd.js'></script>
+        <script src='scene/title/sceneTitle.js'></script>
     </head>
     <body>
         <canvas id="canvas", width="400", height="300"></canvas>
