--- a/flappyBird/game.html
+++ b/flappyBird/game.html
@@ -9,15 +9,11 @@
             }
         </style>
         <script src='guagame/guagame.js'></script>
-        <!-- <script src='scene/main/ball.js'></script>
-        <script src='scene/main/paddle.js'></script>
-        <script src='scene/main/block.js'></script> -->
         <script src='guagame/utils.js'></script>
         <script src='guagame/gua_image.js'></script>
         <script src='levels.js'></script>
+        <script src='config.js'></script>
         <script src='guagame/gua_scene.js'></script>
-        <script src='scene/main/scene.js'></script>
-        <!-- <script src='scene/end/sceneEnd.js'></script>-->
         <script src='scene/title/sceneTitle.js'></script> 
         <script src='scene/title/gua_animation.js'></script> 
     </head>
@@ -27,8 +23,10 @@
         <!-- <div class="">
             <textarea id="id-text-log" rows="15" cols="45"></textarea>
         </div> -->
-        <div class="">
-            <label>
+        <div class="gua-control">
+        </div>
+            <!-- <div class=""> -->
+            <!-- <label>
                 <input class='gua-auto-slider' type="range"
                 value="" max = 40
                 data-value="config.player_speed"
@@ -71,12 +69,12 @@
                     >
                     冷却速度：<span class="gua-label"></span>
             </label>
-        </div>
+        </div> -->
 
         <script src='main.js'></script> 
         <script>
             var es = sel => document.querySelectorAll(sel);
-
+            var e = sel => document.querySelector(sel);
             var bindALL = function(sel, eventName, callback) {
                 var l = es(sel)
                 for (var i = 0; i < l.length; i++) {
@@ -87,14 +85,41 @@
                 }
             }
 
-            bindALL('.gua-auto-slider', 'input', function(event){
-                var target = event.target
-                var bindVar = target.dataset.value
-                v = target.value
-                eval(bindVar+'='+v)
-                var label = target.closest('label').querySelector('.gua-label')
-                label.innerText = v
-            })
+            var templateControl = function(key, item) {
+                var t =`
+                    <div class="">
+                    <label>
+                        <input class='gua-auto-slider' type="range"
+                        value="${item.value}" max=300
+                        data-value="config.${key}"
+                        >
+                        ${item._comment}：<span class="gua-label"></span>
+                    </label>
+                    </div>
+                    `
+                return t
+            }
+            var insertControls = function() {
+                var div = e('.gua-control')
+                var keys = Object.keys(config)
+                for (var k of keys) {
+                    var item = config[k]
+                    var html = templateControl(k, item)
+                    div.insertAdjacentHTML('beforeend', html)
+                }
+            }
+            var _main = function(){
+                insertControls()
+                bindALL('.gua-auto-slider', 'input', function(event){
+                    var target = event.target
+                    var bindVar = target.dataset.value
+                    v = target.value
+                    eval(bindVar+'.value'+'='+v)
+                    var label = target.closest('label').querySelector('.gua-label')
+                    label.innerText = v
+                })
+            }
+            _main()
         </script>   
 
 <script>
