--- a/tower/game.html
+++ b/tower/game.html
@@ -11,6 +11,7 @@
         <script src='guagame/guagame.js'></script>
         <script src='guagame/utils.js'></script>
         <script src='guagame/gua_image.js'></script>
+        <script src='guagame/gua_vector.js'></script>
         <script src='levels.js'></script>
         <script src='config.js'></script>
         <script src='jia_rio.js'></script>
@@ -20,7 +21,7 @@
         <script src='scene/title/gua_animation.js'></script> 
     </head>
     <body>
-        <canvas id="canvas", width="640", height="480"></canvas>
+        <canvas id="canvas", width="600", height="400"></canvas>
         <input id="id-input-speed", type="range", value="30">
         <!-- <div class="">
             <textarea id="id-text-log" rows="15" cols="45"></textarea>
